--- a/index.csr.html
+++ b/index.csr.html
@@ -19,6 +19,6 @@
 
 <body>
   <app-root></app-root>
-<link rel="modulepreload" href="chunk-PMMO7UPA.js"><script src="polyfills-MH2GNY63.js" type="module"></script><script src="main-WRYNNC2D.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-PMMO7UPA.js"><script src="polyfills-MH2GNY63.js" type="module"></script><script src="main-DEUXCKVH.js" type="module"></script></body>
 
 </html>
